# ed-backoffice-eduson

./: .gitignore  Dockerfile  Procfile  README.md  docker-compose-dev.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
conf/: nginx.conf
src/: courses.csv
src/certificates/: admin.py  forms.py  images.py  models.py  serializers.py  tests.py  urls.py  views.py
src/certificates/migrations/: 0001_initial.py  0002_auto_20230628_1249.py  0003_alter_certificate_options_and_more.py  0004_course_remove_certificate_course_hours_and_more.py  0005_alter_certificate_options_alter_course_options.py
src/certificates/utils/: __init__.py  numbers.py
src/check_feed/: apps.py  check.py  forms.py  urls.py  utils.py  views.py
src/courses/: admin.py  check.py  difference_definer.py  models.py  notion.py  tasks.py  urls.py  views.py
src/courses/migrations/: 0001_initial.py  0002_alter_priceshistory_discount_percent_and_more.py  0003_alter_priceshistory_discount_percent.py
src/custom_middlewares/: __init__.py  mixpanel_middleware.py
src/main/: admin.py  forms.py  models.py  urls.py  views.py
src/mix_panel/: __init__.py  tracker.py
src/mixins/: permission_required.py
src/permissions/: permission_required.py
src/proj/: celery_app.py  settings.py  settings_dev.py  urls.py
src/promocodes/: admin.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
src/speech2text/: apps.py  models.py  tasks.py  urls.py  views.py  voice_processor.py
src/templates/: base.html  login.html  register.html
src/tests/: conftest.py  pytest.ini
(+62 files in other folders)
