[tool.poetry]
name = "ed-education-certificate-generator"
version = "0.1.0"
description = ""
authors = ["lchansky <lchansky@mail.ru>"]
readme = "README.md"
packages = [{include = "ed_education_certificate_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
